--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "twelver313/kapital-bank",
-  "description": "Kapital Bank 3DS v2.2 Payment Gateway adapter",
+  "description": "Kapital Bank E-Commerce 3DS v2.2 Payment Gateway adapter",
   "license": "BSD-3-Clause",
   "type": "library",
   "autoload": {
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
+    "php": "^5.6 || ^7.0 || ^8.0",
     "ext-curl": "*",
     "ext-json": "*"
   }
